--- a/Graph/Graph.csproj
+++ b/Graph/Graph.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SkiaSharp" Version="3.118.0-preview.2.3" />
+      <PackageReference Include="SkiaSharp.Views.Desktop.Common" Version="3.118.0-preview.2.3" />
+    </ItemGroup>
+
 </Project>
