--- a/Graph/Graph.csproj
+++ b/Graph/Graph.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="SkiaSharp.Views.Desktop.Common" Version="3.118.0-preview.2.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="MetroParis.xlsx" />
+    </ItemGroup>
+
 </Project>
